k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: eurotunnel-app
    app.kubernetes.io/name: eurotunnel-app
  name: eurotunnel-app
spec:
  to:
    kind: Service
    name: eurotunnel-app
